--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java-library'
-    id 'maven-publish'
+    id 'maven'
 
     id 'com.github.sherter.google-java-format' version '0.8'
 }
@@ -28,15 +28,38 @@ test {
     useJUnitPlatform()
 }
 
-// To publish it to local repo
-publishing {
-    publications {
-        maven(MavenPublication) {
-            groupId = 'com.syucream'
-            artifactId = 'firesql'
+// Write pom.xml to publish this lib to maven repository
+task writeNewPom {
+    doLast {
+        pom {
+            project {
+                groupId 'com.syucream'
+                artifactId = 'firesql'
 
-            from components.java
-        }
+                inceptionYear '2020'
+                licenses {
+                    license {
+                        name 'MIT'
+                        url 'https://github.com/syucream/FireSQL/blob/master/LICENSE'
+                        distribution 'repo'
+                    }
+                }
+            }
+        }.writeTo("$buildDir/libs/firesql-$version-pom.xml")
     }
 }
 
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
